@@ -1,1 +1,1 @@
-:my-command <s-tab><s-tab><ret>
+
