@@ -1,1 +1,2 @@
+set global autocomplete prompt
 def my-command -params 0..1 -shell-script-candidates %{ printf "aaa\nbbb\nccc" } %{ exec i %arg{1} <esc> }
