@@ -1,1 +1,1 @@
-:foo<ret>b<tab><tab><ret>
+
