@@ -5,6 +5,9 @@ released versions.
 
 == Development version
 
+* `shell-script-candidates` completion now runs the script asynchronously
+  while displaying and updating results live.
+
 * `%val{window_range}` elements are now emitted as different strings
 
 * `+` only duplicates identical selections a single time to avoid surprising
